[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/laser.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]

[sub_resource type="RayShape2D" id=1]
length = 4.0

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1.25, 2 )

[node name="Bullet" type="KinematicBody2D"]
collision_mask = 11
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.0235686, 0.0120622 )
scale = Vector2( 0.0520789, 0.200924 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.04907 )
rotation = 3.14159
shape = SubResource( 1 )
one_way_collision = true
one_way_collision_margin = 1.5

[node name="Trail" type="Particles2D" parent="."]
visible = false
amount = 12
speed_scale = 2.0
process_material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
